make sure that download audio link is visible in ie8

--- a/themes/greatermedia/assets/css/ie8.css
+++ b/themes/greatermedia/assets/css/ie8.css
@@ -37,3 +37,8 @@
 .live-player__container {
 	display: none !important;
 }
+
+.me-cannotplay span {
+	display: inline !important;
+	height: 60px;
+}
